core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/enrich3.yf
---
name: echo
graphs:
  start:
    - type: EchoNode
      put: actdetail
      value: ["hello"]

    - type: EchoNode
      put: enriched
      value:
        id: "{{actdetail}}[0]"

    - type: IntConsumerNode
      input: "{{enriched}@id}"


